# CrudFastAPI

./: .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt
src/: main.py
src/customers/api/: customers.py
src/customers/application/: create_customer.py  deactivate_customer.py  get_customer.py  list_customers.py  update_customer.py
src/customers/domain/: customer.py  customer_repository.py  errors.py
src/customers/infrastructure/: sqlalchemy_customer_repository.py
src/customers/infrastructure/db/: models.py
src/infrastructure/db/: dependencies.py  session.py
src/shared/api/: users.py
src/shared/application/: create_user.py
src/shared/domain/: api.py  errors.py
src/shared/infrastructure/: sqlalchemy_user_repository.py
src/shared/infrastructure/db/: models.py
src/shared/tests/domain/: test_user.py
src/tests/application/: test_create_user.py  test_update_customer.py
src/tests/domain/: test_customer.py
src/tests/fakes/: in_memory_customer_repository.py  in_memory_user_repository.py
src/users/api/: users.py
src/users/application/: create_user.py
src/users/domain/: user.py  user_repository.py
src/users/infrastructure/: health.py  sqlalchemy_user_repository.py
src/users/schemas/: user.py
tests/: conftest.py
tests/api/: test_customers_api.py
tests/application/: test_create_customer.py  test_deactivate_customer.py  test_get_customer.py  test_list_customers.py  test_update_customer.py
tests/domain/: test_customer.py  test_user.py
tests/fakes/: in_memory_customer_repository.py
tests/infrastructure/: test_health.py
(+3 files in other folders)
