[tool.poetry]
name = "crudfastapi"
version = "0.1.0"
description = "Small example for FastAPI, DDD and TDD"
authors = ["Richard Garcia <richardferneygarcia@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
fastapi = "0.128.0"
uvicorn = "0.40.0"
pydantic = {extras = ["email"], version = "^2.12.5"}
sqlalchemy = "2.0.45"

[tool.poetry.group.dev.dependencies]
pytest = "9.0.2"
httpx = "0.28.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
